--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </p>
                     <br>
 
-                    <ul class="button">
+                    <ul class="learning">
                         <li>html</li>
                         <li>css</li>
                         <li>javascript</li>
