--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
 </head>
 
-<body class="">
+<body>
     <!-- Entête général de la page -->
     <div class="header-mobile">
         <a href="/" class="logo-mobile">
@@ -155,4 +156,5 @@
     <!-- La feuille de script JavaScript principale du projet  -->
     <script src="/assets/main.js"></script>
 </body>
+
 </html>
